[project]
name = "task-tracker"
version = "1.0.0"
description = "CLI task tracker"
requires-python = ">=3.12"

dependencies = [
    "tabulate>=0.10.0"
]

[project.scripts]
task-tracker = "task_tracker.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_tracker"]